RESOLVED FIXED221640
REGRESSION(r269017): Speedometer2 1% regression
https://bugs.webkit.org/show_bug.cgi?id=221640
Summary REGRESSION(r269017): Speedometer2 1% regression
Yusuke Suzuki
Reported 2021-02-09 16:05:22 PST
REGRESSION(r269017): Speedometer2 1% regression
Attachments
Patch (7.77 KB, patch)
2021-02-09 16:06 PST, Yusuke Suzuki
mark.lam: review+
Yusuke Suzuki
Comment 1 2021-02-09 16:06:19 PST
Mark Lam
Comment 2 2021-02-09 16:09:15 PST
Comment on attachment 419780 [details] Patch rs=me
Yusuke Suzuki
Comment 3 2021-02-09 16:34:06 PST
This is just a reverting patch and ensured it is built. Now landing.
Yusuke Suzuki
Comment 4 2021-02-09 16:34:35 PST
Radar WebKit Bug Importer
Comment 5 2021-02-09 16:35:16 PST
Note You need to log in before you can comment on or make changes to this bug.